--- a/ref.bib
+++ b/ref.bib
@@ -9,6 +9,17 @@
 	organization = {Springer},
 }
 
+@misc{cav-extended,
+	title = {Does a Program Yield the Right Distribution? Verifying
+	         Probabilistic Programs via Generating Functions},
+	author = {Mingshuai Chen and Joost-Pieter Katoen and Lutz Klinkenberg and
+	          Tobias Winkler},
+	year = {2022},
+	eprint = {2205.01449},
+	archivePrefix = {arXiv},
+	primaryClass = {cs.LO},
+}
+
 @inproceedings{lafi-inf,
 	title = {Exact Probabilistic Inference Using Generating Functions},
 	author = {Lutz Klinkenberg and Tobias Winkler and Mingshuai Chen and
@@ -26,7 +37,6 @@
 	journal = {Proc. {ACM} Program. Lang.},
 	number = {{OOPSLA1}},
 	volume = {8},
-	_pages = {xx--xx},
 	_articleno = {127},
 	_numpages = {54},
 	year = {2024},
@@ -38,11 +48,27 @@
 	year = {2005},
 	publisher = {CRC press},
 }
-@book{pgclbook,
-	author = {McIver, Annabelle and Morgan, Carroll},
-	title = {Abstraction, Refinement And Proof For Probabilistic Systems
-	         (Monographs in Computer Science)},
-	year = {2004},
-	isbn = {0387401156},
-	publisher = {SpringerVerlag},
-}	
+
+@article{pgcl,
+	title = {Probabilistic models for the guarded command language},
+	journal = {Science of Computer Programming},
+	volume = {28},
+	number = {2},
+	pages = {171-192},
+	year = {1997},
+	note = {Formal Specifications: Foundations, Methods, Tools and Applications},
+	issn = {0167-6423},
+	doi = {https://doi.org/10.1016/S0167-6423(96)00019-6},
+	url = {https://www.sciencedirect.com/science/article/pii/S0167642396000196},
+	author = {He Jifeng and K. Seidel and A. McIver},
+}
+
+@misc{probably,
+	author = {Philipp Schröer and Lutz Klinkenberg and Leo Mommers},
+	title = {Probably},
+	year = {2021},
+	publisher = {Github},
+	journal = {GitHub repository},
+	howpublished = {\url{https://github.com/Philipp15b/probably}},
+}
+
